[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimatviz"
version = "0.1.0"
description = "A Python tool for visualising data in multiscale materials modelling frameworks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU General Public Licence 3.0" }

authors = [
  { name = "Ethan L. Edmunds", email = "eledmunds1@sheffield.ac.uk" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy", 
  "matplotlib",
  "pandas" # Pandas is essential for data handling
]

[project.optional-dependencies]
interactive = [
  "plotly" # For interactive plots
]
animation = [
  "matplotlib>=3.8" # Some animation features may require a newer version
]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]